// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mistakes was render correctly With one count 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;

exports[`Mistakes was render correctly With zero count 1`] = `
<div
  className="game__mistakes"
/>
`;
